Fixed technical tools font problem and button spacing in about section

--- a/styles.css
+++ b/styles.css
@@ -202,8 +202,9 @@ h2 {
 }
 
 .skills_design {
-  height: 30px;
+  font-family: "Inter", sans-serif;
   border: none;
+  text-align: center;
   border-radius: 4px;
   font-weight: 600;
   font-size: 12px;
@@ -227,22 +228,23 @@ h2 {
 }
 
 .btngreen {
+  font-family: "Inter", sans-serif;
   align-self: center;
-  width: 150px;
-  height: 50px;
   font-weight: 500;
   font-size: 17px;
   background-color: #36b37e;
   color: #fff;
   margin-top: 5%;
   border: none;
+  padding: 12px;
   border-radius: 4px;
   margin-bottom: 5%;
+  letter-spacing: 0.03em;
 }
 
 .btngreen:hover {
   border-radius: 4px;
-  background-color: #36b37e;
+  background-color: #0b5838;
 }
 
 hr {
